// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Banner > handles newlines in text 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ Line 1                                                                       │
│ Line 2                                                                       │
│ Line 3                                                                       │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Banner > renders in info mode 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ Info Title                                                                   │
│ Info Body                                                                    │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Banner > renders in warning mode 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ Warning Title                                                                │
│ Warning Body                                                                 │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;
